# -K1986VK025_VSC_CMake_Example

./: .gitignore  CMakeLists.txt  Milandr_Template.code-workspace  README.md
Components/MLDR187_SPL/: CMakeLists.txt
Components/RTOS/: CMakeLists.txt
Components/RTOS/Config/: FreeRTOSConfig.h  freertos_risc_v_chip_specific_extensions.h
Components/RTOS/FreeRTOS/include/: stack_macros.h
Components/Submodule/: CMakeLists.txt
Components/Submodule/Inc/: test.h
Components/Submodule/Src/: test.cpp
Components/Submodule2/: CMakeLists.txt
Components/Submodule2/Inc/: test2.h
Components/Submodule2/Src/: test2.cpp
Core/: CMakeLists.txt
Core/src/: interrupt.h  text.c
MLDR187_SPL/: changelog.txt
Submodule/: CMakeLists.txt
Submodule2/: CMakeLists.txt
Submodule2/Src/: test2.cpp
src/: Font_ASCII_6x8.c  Logo.h  font_defs.h  hooks.c  init.c  init.h  lcd.h  lcd_MLDR187.c  main.c  main.cpp  text.h
svd/: MLDR187_rev1.svd  MLDR187_rev2.svd
